<resources>
    <string name="app_name">AListLite</string>
    <string name="tooltip_refresh">刷新当前页面</string>
    <string name="tooltip_homepage">返回主页</string>
    <string name="tooltip_go_back">后退</string>
    <string name="tooltip_go_forward">前进</string>
    <string name="tooltip_more">更多</string>
    <string name="btn_text_start">ON</string>
    <string name="btn_text_stop">OFF</string>
    <string name="alist_service_is_running">AList 服务运行中</string>
    <string name="alist_service_not_running">AList 服务未启动</string>
    <string name="alist_tile_label">AList</string>
    <string name="app_name_ext">AListLite</string>
    <string name="app_version">v1.0.0&#160;</string>
    <string name="tv_text_open_issue">问题反馈&#160;|</string>
    <string name="tv_text_open_discussion">&#160;社区讨论&#160;</string>
    <string name="popup_menu_item_qrcode">远程访问</string>
    <string name="popup_menu_item_open_browser">浏览器访问</string>
    <string name="popup_menu_item_permission">权限配置</string>
    <string name="popup_menu_item_password">密码设置</string>
    <string name="popup_menu_item_release_log">更新日志</string>
    <string name="popup_menu_item_advanced_config">高级配置</string>
    <string name="popup_menu_item_service_logs">服务日志</string>
    <string name="popup_menu_item_check_updates">检查更新</string>
    <string name="popup_menu_item_alitv_token_get">阿里云盘令牌</string>
    <string name="popup_menu_item_https">HTTPS 设置</string>
    <string name="popup_menu_item_one_click_login">一键登录</string>
    <string name="popup_menu_item_about">关于 AListLite</string>
    <string name="activity_title_permission_check">AListlite 权限配置</string>
    <string name="config_view">|&#160;高级配置&#160;</string>
    <string name="check_updates">|&#160;检查更新</string>
    <string name="current_alist_config">AList 配置文件</string>
    <string name="developer_info">Developed by LeoHao</string>
    <string name="alist_version">From AList</string>
    <string name="support_me">“你的支持是我持续优化的强大动力”</string>
    <string name="alist_website">https://alist.nn.ci/</string>
    <string name="opensource_info">https://github.com/LeoHaoVIP/AListLiteAndroid</string>
    <string name="setup_tutorial">https://www.bilibili.com/video/BV1PA4m1G7Ui</string>
    <string name="contact_me">联系作者 zhaowenhao2867@outlook.com</string>
</resources>
