<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    />
    <ImageView
            android:id="@+id/img_reward_code"
            android:src="@drawable/rewardcode"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
    />
    <TextView
            android:id="@+id/tv_support_me"
            android:layout_below="@id/img_reward_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:text="@string/support_me"
    />
    <TextView
            android:id="@+id/tv_opensource"
            android:autoLink="web"
            android:layout_below="@id/tv_support_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:text="@string/opensource_info"
    />
    <TextView
            android:id="@+id/tv_setup_tutorial"
            android:autoLink="web"
            android:layout_below="@id/tv_opensource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:text="@string/setup_tutorial"
    />
    <TextView
            android:id="@+id/tv_contact_me"
            android:autoLink="email"
            android:layout_below="@id/tv_setup_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:text="@string/contact_me"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_contact_me"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/alist_version"
        />
        <TextView
                android:background="@null"
                android:focusable="true"
                android:clickable="true"
                android:onClick="checkUpdates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/check_updates"/>
    </LinearLayout>
</RelativeLayout>